# fetch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  tsup.config.ts
.changeset/: SMOODEV-946-dotnet-parity-sweep.md  SMOODEV-947-python-retry-parity.md  SMOODEV-948-async-auth-provider.md  SMOODEV-949-rate-limit-retry.md  SMOODEV-950-cb-rate-state-change.md  SMOODEV-968-dotnet-rate-limiter.md  SMOODEV-969-py-shared-rate-limiter.md  add-language-readmes.md  browser-bare-export.md  browser-export-condition.md  bump-logger-utils.md  clear-poets-lie.md  cold-gifts-fly.md  dotnet-port.md  eager-trees-join.md  easy-goats-write.md  every-cougars-learn.md  fetch-drift.md  giant-jobs-call.md  legal-kids-find.md  mean-melons-invent.md  migrate-to-tsdown.md  multi-language-parity.md  plenty-experts-matter.md  quick-rooms-attend.md  rich-plants-tie.md  rich-rats-stop.md  rude-eagles-lay.md  shaggy-towns-hide.md  shiny-houses-scream.md  shiny-sites-move.md  shiny-tigers-wonder.md  smoodev-662-dotnet-version-sync.md  smoodev-664-readme-value-frame.md  smoodev-666-multi-target.md  smoodev-667-publish-pipeline.md  sour-peas-cheat.md  stupid-boats-speak.md  swift-bags-rhyme.md  update-readme.md
.claude/hooks/: enforce-worktree.sh
.github/workflows/: pr-checks.yml  release.yml
.smooai-logs/: output.ansi
dotnet/: SmooAI.Fetch.sln
dotnet/SmooAI.Fetch/: README.md  (+10 more)
dotnet/SmooAI.Fetch.Tests/: DependencyInjectionTests.cs  HttpResponseErrorTests.cs  RateLimiterTests.cs  RetryPolicyTests.cs  SmooAI.Fetch.Tests.csproj  SmooFetchBuilderTests.cs  SmooFetchTests.cs
python/: README.md  pyproject.toml
python/src/smooai_fetch/: __init__.py  _builder.py  _circuit_breaker.py  _client.py  _defaults.py  _errors.py  _hooks.py  _rate_limit.py  _response.py  _retry.py  _timeout.py  _types.py
python/tests/: conftest.py  test_auth_provider.py  test_basic.py  test_builder.py  test_circuit_breaker.py  test_fetch.py  test_hooks.py  test_integration.py  test_rate_limit.py  test_retry.py  test_schema.py  test_timeout.py
rust/fetch/: Cargo.toml  README.md
rust/fetch/src/: builder.rs  circuit_breaker.rs  client.rs  defaults.rs  error.rs  hooks.rs  lib.rs  rate_limit.rs  response.rs  retry.rs  timeout.rs  types.rs
rust/fetch/tests/: auth_provider_tests.rs  builder_tests.rs  circuit_breaker_tests.rs  fetch_tests.rs  hooks_tests.rs  integration_tests.rs  rate_limit_retry_tests.rs  rate_limit_tests.rs  retry_tests.rs  timeout_tests.rs
scripts/: sync-versions.mjs
src/: fetch.integration.spec.ts  fetch.spec.ts  fetch.ts  index.ts  logger.ts
(+25 files in other folders)
