[project]
name = "smooai-fetch"
version = "2.1.2"
description = "A resilient HTTP fetch client with retries, timeouts, rate limiting, and circuit breaking."
readme = "README.md"
authors = [{ name = "SmooAI", email = "brent@smooai.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["fetch", "http", "retry", "circuit-breaker", "smooai"]

[project.urls]
Homepage = "https://github.com/SmooAI/fetch"
Repository = "https://github.com/SmooAI/fetch"
Issues = "https://github.com/SmooAI/fetch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smooai_fetch"]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.11.0", "basedpyright>=1.0.0", "poethepoet>=0.29.0"]

[tool.poe.tasks]
lint = "ruff check src/ tests/"
"lint:fix" = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
"format:check" = "ruff format --check src/ tests/"
typecheck = "basedpyright src/"
test = "uv run pytest tests/ -v"
build = "uv build --wheel --sdist"
"install-dev" = "uv sync --group dev"

[tool.poe.tasks.publish]
sequence = [
  { cmd = "uv build --wheel --sdist" },
  { cmd = "uv publish" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
