[package]
name = "smooai-fetch"
version = "2.1.2"
edition = "2021"
description = "A resilient HTTP fetch client with retries, timeouts, rate limiting, and circuit breaking."
license = "MIT"
repository = "https://github.com/SmooAI/fetch"
homepage = "https://github.com/SmooAI/fetch"
keywords = ["fetch", "http", "retry", "circuit-breaker", "smooai"]
categories = ["web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
